--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -190,21 +190,18 @@ publication volume ``without regard to quality'' (Rasmussen, 2023).
 
 The controversies surrounding hybrid open access and transformative
 agreements have led to varying policy conclusions. For instance, the
-UK's Joint Information Systems Committee (JISC) evaluated its open
+British Joint Information Systems Committee (JISC) evaluated its open
 access strategy, which included transformative agreements (Brayman et
 al., 2024). The evaluation revealed that while these agreements had a
-significant impact on the growth of open access in the UK, they had
+significant impact on the growth of open access in the country, they had
 limited effects in facilitating a global shift towards full open access.
-As a result, the report advised that the UK's open access strategy
+As a result, the report advised that the British open access strategy
 should be reassessed. After making similar observation, Norwegian and
 Swedish universities and their consortia also argued for policy changes
-(Holden et al., 2023; Widding, 2024). Notably, the Association of
-Swedish Higher Education Institutions (Sveriges universitets- och
-högskoleförbund, SUHF) recommended only supporting agreements for
-publishing in fully open access journals by 2026 (Widding, 2024).
-Furthermore, cOAlition S will conclude its financial support of
-transformative agreements at the end of 2024, but will continue to view
-open access resulting from such agreements as compliant. \footnote{\url{https://www.coalition-s.org/coalition-s-confirms-the-end-of-its-financial-support-for-open-access-publishing-under-transformative-arrangements-after-2024/}}.
+(Holden et al., 2023; Widding, 2024). Furthermore, cOAlition S conclude
+its financial support of transformative agreements at the end of 2024,
+but continue to view open access resulting from such agreements as
+compliant. \footnote{\url{https://www.coalition-s.org/coalition-s-confirms-the-end-of-its-financial-support-for-open-access-publishing-under-transformative-arrangements-after-2024/}}.
 cOAlition S also removed the majority of hybrid journals from its
 Transformative Journal program in 2023 due to publishers' failure to
 meet self-defined open access growth targets (Brainard, 2023). By
@@ -230,10 +227,10 @@ is a limiting factor when studying the impact of transformative
 agreements (Bakker et al., 2024), because bibliometric databases, even
 though many allow the retrieval of open access articles in hybrid
 journals, do not directly attribute them to specific transformative
-agreements. Likewise, article-level open access invoicing and cost data
-are only partly available, which would make it possible to establish a
-direct link between transformative agreements and open access
-publications (Jahn et al., 2022; Kramer, 2024).
+agreements. Likewise, article-level open access invoicing and cost data,
+which would make it possible to establish a direct link between
+transformative agreements and open access publications (Jahn et al.,
+2022; Kramer, 2024).
 
 The present study aims to address these limitations by combining
 multiple openly available data sources to determine open access uptake
@@ -268,8 +265,8 @@ data source for article-level metadata including Creative Commons (CC)
 license information to indicate open access availability on publisher
 websites. Because of a lack of comprehensive publicly available
 invoicing data, open access articles published through transformative
-agreements were determined by first author affiliations from OpenAlex
-(Priem et al., 2022), linked to eligible institutions according to the
+agreements were determined by linking first author affiliations from
+OpenAlex (Priem et al., 2022) to eligible institutions according to the
 transformative agreement data. In the following, the steps are described
 in detail.
 
@@ -288,31 +285,32 @@ data}\label{transformative-agreement-and-hybrid-journal-data}
 Data gathering started with obtaining journals included in
 transformative agreements from the publicly available Transformative
 Agreement Data dump\footnote{\url{https://journalcheckertool.org/transformative-agreements/}}
-used by the cOAlition S Journal Checker Tool \footnote{\url{https://www.coalition-s.org/blog/enabling-accurate-results-within-the-journal-checker-tool/}},
+used by the cOAlition S Journal Checker Tool\footnote{\url{https://www.coalition-s.org/blog/enabling-accurate-results-within-the-journal-checker-tool/}},
 a voluntary effort based on publicly disclosed contracts in the ESAC
-Transformative Agreement Registry.\footnote{\url{https://esac-initiative.org/about/transformative-agreements/agreement-registry/}}.
+Transformative Agreement Registry\footnote{\url{https://esac-initiative.org/about/transformative-agreements/agreement-registry/}}.
 The dump consists of multiple online Google spreadsheets where each data
 file represents one agreement listed in the ESAC Transformative
 Agreement Registry. From the retrieved spreadsheet files, journals and
 institutions involved per agreement were obtained.
 
 It should be noted that although many library consortia see the need to
-register their agreements through the ESAC registry, many fail to
-disclose all details, including contracts (Bakker et al., 2024; Kramer,
-2024). Furthermore, the extent to which ESAC is comprehensive remains
-uncertain, potentially limiting the coverage of transformative
-agreements in the Journal Checker Tool. Another limitation of using the
-Journal Checker Tool and its underlying publicly available data dump to
-study the development of transformative agreements over time is that
-expired transformative agreements are constantly removed. To address
-this, four different snapshots were safeguarded and combined for this
-study: self-archived versions from July 2021, July 2022, and May 2023,
-as well as the most current dump downloaded on 11 December 2023. This
-ensured that transformative agreements, which ended from 2021 onwards,
-were included, representing the majority of transformative agreements.
-Overall, the four combined Transformative Agreement Data dumps used in
-this study contained 729 of 869 agreements listed in the ESAC
-Transformative Agreement Registry by December 2023.
+register their agreements through the ESAC registry, some fail to
+disclose all details, including the full-text of contracts (Bakker et
+al., 2024; Kramer, 2024). Furthermore, the extent to which ESAC is
+comprehensive remains uncertain, potentially limiting the coverage of
+transformative agreements in the Journal Checker Tool. Another
+limitation of using the Journal Checker Tool and its underlying publicly
+available data dump to study the development of transformative
+agreements over time is that expired transformative agreements are
+constantly removed. To address this, four different snapshots were
+safeguarded and combined for this study: self-archived versions from
+July 2021, July 2022, and May 2023, as well as the most current dump
+downloaded on 11 December 2023. This ensured that transformative
+agreements, which ended from 2021 onwards, were included, representing
+the majority of transformative agreements. Overall, the four combined
+Transformative Agreement Data dumps used in this study contained 729 of
+869 agreements listed in the ESAC Transformative Agreement Registry by
+December 2023.
 
 The Transformative Agreement Data dumps link agreements to journals
 represented by journal names and the ISSN. After mapping ISSN variants
@@ -402,23 +400,20 @@ instead; approximately 90\% of the articles examined had first author
 affiliation metadata in OpenAlex, which is a much larger proportion than
 previously reported for the October 2022 snapshot (Zhang et al., 2024).
 First authors typically contribute the most to a paper and are often
-considered lead authors (Larivière et al., 2016), although notable
-differences in corresponding author metadata were observed across
-subjects, publication years and bibliometric databases
-(Chinchilla-Rodríguez et al., 2024). In case of lacking data about
-corresponding authors in bibliometric databases, related studies also
-utilised first authors as a proxy to examine open access payments and
-transformative agreements (Haucap et al., 2021; Shu \& Larivière, 2023;
-Zhang et al., 2022).
+considered as lead authors (Chinchilla-Rodríguez et al., 2024; Larivière
+et al., 2016). In case of lacking data about corresponding authors in
+bibliometric databases, related studies also utilised first authors as a
+proxy to examine open access payments and transformative agreements
+(Haucap et al., 2021; Shu \& Larivière, 2023; Zhang et al., 2022).
 
 To estimate the impact of transformative agreements on hybrid open
 access, participating institutions from the Transformative Agreement
 Data dump, which the cOAlition S crowd-sourced from agreement documents
 and consortia, were matched with the first author affiliations recorded
 by OpenAlex using the ROR-ID. Matching also considered the duration of
-agreements according to the ESAC registry. 502 agreements were active
-between 2018 and 2022. Upon inspection, Transformative Agreement Data
-did not comprehensively cover associated institutions, such as
+agreements according to the ESAC registry. In total, 502 agreements were
+active between 2018 and 2022. Upon inspection, Transformative Agreement
+Data did not comprehensively cover associated institutions, such as
 university hospitals or institutes of large research organisations such
 as the Max Planck Society. To improve the matching, Transformative
 Agreement Data were automatically enriched with ROR-IDs from associated
@@ -458,9 +453,9 @@ carried out using GitHub Actions, a continuous integration service.
 
 \subsection{Overview}\label{overview}
 
-Between 2018 and 2022, 11,189 out of 12,857 eligible hybrid journals in
+Between 2018 and 2022, 11,189 out of 12,857 hybrid journals in
 transformative agreements published at least one open access article
-under a Creative Commons license. These 11,189 hybrid journals
+under a Creative Commons license. These eligible 11,189 hybrid journals
 constituted the foundation for the subsequent analyses. Collectively,
 they provided open access to 742,369 out of 8,146,958 articles during
 the investigated period, representing a five-year open access proportion
@@ -469,8 +464,7 @@ time of publication contributed 328,957 (44\%) open access articles.
 Overall, this investigation was able to establish a link between open
 access articles and eligible institutions for 394 out of 502 (78\%)
 active transformative agreements between 2018 and 2022 through the
-analysis of publication metadata, including affiliations and agreement
-data.
+linking of first author affiliations with agreement data.
 
 \begin{figure}[ht!]
 
@@ -506,9 +500,9 @@ upper quartiles and whiskers over the years illustrates that an
 increasing number of journals published an above-average proportion of
 open access articles. In 2022, 25\% of hybrid journals (n = 2,576) had
 an open access uptake of 29\%, and 6.6\% of journals (n = 744) provided
-the majority of their articles under a Creative Commons license in the
-same year. On average, these journals were smaller (M = 75, SD = 186)
-than those with an open access share below 50\% (M = 164, SD = 347).
+the majority of their articles under a CC license in the same year. On
+average, these journals were smaller (M = 75, SD = 186) than those with
+an open access share below 50\% (M = 164, SD = 347).
 
 When comparing the impact of open access through transformative
 agreements across journals, it shows that for many journals, these
@@ -554,12 +548,12 @@ Other & 5,767 & 50.6 & 3,061,337 & 37.3 & 252,523 & 33.5 & 86,294 & 26.1\\
 
 However, there are notable differences between the three large
 publishers. Although Elsevier published the largest volume of articles
-(n = 2,770,826, 34\%), it recorded a comparably low number of open
+(n = 2,770,826; 34\%), it recorded a comparably low number of open
 access articles, including those that are associated with transformative
 agreements. In contrast, Springer Nature and Wiley provided open access
 to a larger proportion of their articles (13\% of Springer Nature
 articles and 15\% of Wiley articles were open access), leading to higher
-open access market share (23\% Springer Nature resp. 23\% Wiley). This
+open access market shares (23\% Springer Nature resp. 23\% Wiley). This
 difference between Elsevier on the one hand and Springer Nature and
 Wiley on the other can be attributed to transformative agreements, as
 the latter made the majority of their open access articles available
@@ -593,7 +587,7 @@ The varying degrees of adoption of open access across the three major
 publishers can be attributed to distinct approaches to transformative
 agreements. Springer Nature, for example, started offering open access
 agreements for its hybrid journal portfolio to selected consortia such
-as the Max Planck Society, the Swedish Bibsam Consortium and the Finnish
+as the Max Planck Society, the Swedish Bibsam consortium and the Finnish
 FinELib consortium in 2015 under the name Springer Compact\footnote{\url{https://web.archive.org/web/20180414062853id_/http://www.liber2015.org.uk/wp-content/uploads/2015/03/Springer-Compact.pdf}}.
 Prior to this, Springer had some pilot agreements with a small number of
 institutions, including the University of Göttingen (Schmidt \& Shearer,
@@ -601,13 +595,13 @@ institutions, including the University of Göttingen (Schmidt \& Shearer,
 data as they concluded before the start of the transformative agreement
 data collection in June 2021. Nonetheless, the results demonstrate the
 importance of agreements for Springer Nature's hybrid open access
-business over the past five years (Figure \ref{fig:publisher_figure}).
-In 2022, 66\% (n = 34,725) of open access in Springer Nature hybrid
-journals was enabled through transformative agreements. In the same
-year, 70\% (n = 37,316) of Wiley's open access articles could be linked
-to transformative agreements. By contrast, Elsevier published a
-comparatively lower proportion of its open access articles through
-transformative agreements in 2022 (n = 32,627; 54\%).
+business over the five-years period (Figure
+\ref{fig:publisher_figure}B). In 2022, 66\% (n = 34,725) of open access
+in Springer Nature hybrid journals was enabled through transformative
+agreements. In the same year, 70\% (n = 37,316) of Wiley's open access
+articles could be linked to transformative agreements. By contrast,
+Elsevier published a comparatively lower proportion of its open access
+articles through transformative agreements in 2022 (n = 32,627; 54\%).
 
 The increasing trend towards transformative agreements can also be
 observed at the journal-level (Figure \ref{fig:publisher_figure}C).
@@ -662,7 +656,7 @@ Social Sciences & 3,967 & 38.1 & 953,084 & 13.3 & 138,388 & 19.3 & 77,496 & 24.3
 
 Figure \ref{fig:subject_panel} presents the relative growth of hybrid
 open access by subject area between 2018 and 2022. In particular, Social
-Sciences including Arts and Humanties journals accounted for the
+Sciences including Arts and Humanities journals accounted for the
 strongest growth in the five-years period from 6.4\% (n = 8,361) to 23\%
 (n = 51,938), followed by the Life Sciences from 7.6\% (n = 15,003) to
 18\% (n = 39,494) , Health Sciences from 5.3\% (n = 18,279) to 16\% (n =
@@ -678,7 +672,7 @@ participating institutions (see \ref{fig:subject_panel}B).
 
 }
 
-\caption{Development of open access in hybrid journals in transformative agreements between 2018 and 2022 by ASJC subject area. The blue areas represent open access through transformative agreements, the grey areas depict open access articles where no link to an agreement could be established. (A) Proportion of open access articles in hybrid journals per year and subject area (B) Percentage of hybrid open access via agreements per year and subject area Boxplots (C) show individual open access uptake rates by individual hybrid journals and open access funding per publication year and subject area The individual outliers are not shown. Note that data on transformative agreements ending before June 2021 were not available for this study.}\label{fig:subject_panel}
+\caption{Development of open access in hybrid journals in transformative agreements between 2018 and 2022 by ASJC subject area. The blue areas represent open access through transformative agreements, the grey areas depict open access articles where no link to an agreement could be established. (A) Proportion of open access articles in hybrid journals per year and subject area. (B) Percentage of hybrid open access via agreements per year and subject area. (C) Boxplots show individual open access uptake rates by individual hybrid journals and open access funding per publication year and subject area. The individual outliers are not shown. Note that data on transformative agreements ending before June 2021 were not available for this study.}\label{fig:subject_panel}
 \end{figure}
 
 Figure \ref{fig:subject_panel}C shows that this trend was consistent
@@ -700,13 +694,13 @@ Between 2018 and 2022, high-income countries almost exclusively
 dominated hybrid open access publishing through transformative
 agreements. To discern socio-economic differences, these countries were
 grouped according to their membership in the Organisation for Economic
-Co-operation and Development (OECD). During 2018 and 2022, first authors
-affiliated with institutions from OECD member countries published
-602,050 open access articles in hybrid journals, representing 81\% of
-the investigated open access articles. This disparity between OECD
-nations and other countries becomes even more evident when considering
-open access through transformative agreements, as 310,712 of 328,957, or
-94\% of open access articles were associated with such agreements.
+Co-operation and Development (OECD). Overall, first authors affiliated
+with institutions from OECD member countries published 602,050 open
+access articles in hybrid journals, representing 81\% of the
+investigated open access articles. This disparity between OECD nations
+and other countries becomes even more evident when considering open
+access through transformative agreements, as 310,712 of 328,957, or 94\%
+of open access articles were associated with such agreements.
 
 \begin{figure}[ht!]
 
@@ -714,7 +708,7 @@ open access through transformative agreements, as 310,712 of 328,957, or
 
 }
 
-\caption{Development of hybrid open access publishing by country. (A) presents the relative number of articles published in hybrid journals included in transformative agreement by year, distinguishing between BRICS as of 2022, OECD and other countries. (B) Scatterplot contrasts total articles with open access article volume in 2022, by country and its OECD (purple-colored points) or BRICS (green) membership. Trend line obtained from linear regression, grey areas show pointwise symmetric 95\% confidence bands. (C) Hybrid open access market share in 2022 by country. In (A) and (C), the blue areas represent open access through transformative agreements, the grey areas depict open access articles where no link to an agreement could be established. The remainder shows closed access articles. Country names are represented as ISO two-letter country codes.}\label{fig:country_patch}
+\caption{Development of hybrid open access publishing by country. (A) presents the relative number of articles published in hybrid journals included in transformative agreement by year, distinguishing between BRICS as of 2022, OECD and other countries. (B) Scatterplot contrasts total articles with open access article volume in 2022, by country and its OECD (purple-colored points) or BRICS (green) membership. Trend line obtained from linear regression, grey area show pointwise symmetric 95\% confidence bands. (C) Hybrid open access market share in 2022 by country. In (A) and (C), the blue areas represent open access through transformative agreements, the grey areas depict open access articles where no link to an agreement could be established. The remainder shows closed access articles. Country names are represented as ISO two-letter country codes.}\label{fig:country_patch}
 \end{figure}
 
 Figure \ref{fig:country_patch}A shows the development of hybrid open
@@ -724,12 +718,11 @@ China, and South Africa as of 2022. The residual category ``Other''
 includes the remaining countries. Full counting was applied to account
 for multiple country affiliations (Hottenrott et al., 2021). Open access
 in hybrid journals increased in particular because of publications from
-authors affiliated with institutions from the OECD area, from 52,154 in
-2018 to 202,787 in 2022. This growth was largely driven by
-transformative agreements. The share of open access by agreement rose
-from 5.5\% in 2018 (n = 2,859) to 68\% (n = 137,815) in 2022. In
-contrast, BRICS recorded a low uptake, moderately growing from 1.6\% in
-2018 to 3.7\% in 2022.
+first authors affiliated with institutions from the OECD area, from
+52,154 in 2018 to 202,787 in 2022. This growth was largely driven by
+transformative agreements. Their share rose from 5.5\% in 2018 (n =
+2,859) to 68\% (n = 137,815) in 2022. In contrast, BRICS recorded a low
+uptake, moderately growing from 1.6\% in 2018 to 3.7\% in 2022.
 
 Despite the rise of open access across OECD countries, the overall
 publication output decreased sharply, dropping to 786,903 in 2022 after
@@ -759,15 +752,15 @@ compares the total publication output with the number of open access
 articles. With 391,530 articles, China was the most productive country,
 followed by the United States (n = 268,965) and India (n = 87,428). In
 contrast, Western and Northern European countries published a
-considerably high number of open access articles. Particularly,
-Scandinavian countries, the Netherlands and Austria recorded
-above-average open access shares, as indicated by the linear trend line.
-As shown in Figure \ref{fig:country_patch}C, transformative agreements
-contributed to these market positions. Interestingly, the United States
-had a notable open access market share of 15\%, although transformative
-agreements contributed to a lesser extent. Similarly, China's open
-access market share of 7.2\% in 2022 was comparable to that of the
-Netherlands, which was 7.1\%.
+considerably high number of open access articles. Particularly, Nordic
+countries, the Netherlands and Austria recorded above-average open
+access shares, as indicated by the linear trend line. As shown in Figure
+\ref{fig:country_patch}C, transformative agreements contributed to these
+market positions. Interestingly, the United States had a notable open
+access market share of 15\%, although transformative agreements
+contributed to a lesser extent. Similarly, China's open access market
+share of 7.2\% in 2022 was comparable to that of the Netherlands, which
+was 7.1\%.
 
 \begin{figure}[ht!]
 
@@ -835,20 +828,21 @@ commercial publishers Elsevier, Springer Nature, and Wiley dominate,
 particularly with regard to open access provided through transformative
 agreements. Together, the three publishers accounted for three-fourths
 of open access articles through transformative agreements, while
-recording less than half of the total publication volume published
-between 2018 and 2022. This observation aligns with previous research on
-shifts in the publishing market following the introduction of funding
-opportunities for hybrid open access (Butler et al., 2023; Jahn \&
-Tullney, 2016; Shu \& Larivière, 2023). Additionally, the results
-confirm previously observed variations by publisher, with Elsevier
-exhibiting a different development than Springer Nature and Wiley
-(Butler et al., 2023; Jahn et al., 2022). However, it must be noted that
-the focus of transformative agreements on publishers with large hybrid
-journal portfolios is intentional (Campbell et al., 2022). Because of
-transformative agreements with a few large publishers, national
-consortia were able to substantially increase their country's annual
-open access article volume (Bosman, Jonge, et al., 2021; Huang et al.,
-2020; Pinhasi et al., 2021; Taubert et al., 2023; Wenaas, 2022).
+recording about half of active hybrid journals included in
+transformative agreements between 2018 and 2022. This observation aligns
+with previous research on shifts in the publishing market following the
+introduction of funding opportunities for hybrid open access (Butler et
+al., 2023; Jahn \& Tullney, 2016; Shu \& Larivière, 2023). Additionally,
+the results confirm previously observed variations by publisher, with
+Elsevier exhibiting a different development than Springer Nature and
+Wiley (Butler et al., 2023; Jahn et al., 2022). However, it must be
+noted that the focus of transformative agreements on publishers with
+large hybrid journal portfolios is intentional (Campbell et al., 2022).
+Because of transformative agreements with a few large publishers,
+national consortia were able to substantially increase their country's
+annual open access article volume (Bosman, Jonge, et al., 2021; Brayman
+et al., 2024; Huang et al., 2020; Pinhasi et al., 2021; Taubert et al.,
+2023; Wenaas, 2022; Widding, 2024).
 
 Moreover, this study presents varying levels of open access uptake
 through transformative agreements across journals, which can be
@@ -871,26 +865,26 @@ to national societies or regional research scope.
 
 Surprisingly, the total publication output of high-income countries
 belonging to the OECD in hybrid journals declined substantially after
-peaking in 2020, whereas that of BRICS countries doubled from 2018 to
-2022. Because the BRICS expansion can be exclusively attributed to
-closed access articles, this development has the potential to hinder the
-transition of academic journal publishing to full open access through
-transformative agreements and demands discussion. In China, the country
-with the highest volume of articles in hybrid journals, only limited
-research funding to pay for open access is available, with expenditures
-for open access publishing surpassing subscription costs (Shu \&
-Larivière, 2023). Furthermore, the focus of Chinese authors on
-established journals may contribute to this trend (Zhang et al., 2022).
-Although China supports Plan S (Schiermeier, 2018), this is not
-reflected in the data in terms of open access uptake in hybrid journals.
-Market observers also do not expect a broad implementation of
-transformative agreements in China in near future (Owens, 2024). As
-highlighted by Koley \& Lala (2023), India faces similar challenges in
-terms of the availablility of resources to pay for open access. At the
-same time, access to research literature is a pressing issue, which is
-addressed by the ``Indian one nation, one subscription'' policy
-proposal. However, this policy focuses on centrally negotiated
-subscriptions and does not entail open access.
+peaking in 2020, whereas that of BRICS countries continuously grew from
+2018 to 2022. Because the BRICS expansion can be exclusively attributed
+to closed access articles, this development has the potential to hinder
+the transition of academic journal publishing to full open access
+through transformative agreements and demands discussion. In China, the
+country with the highest volume of articles in hybrid journals, only
+limited research funding to pay for open access is available, with
+expenditures for open access publishing surpassing subscription costs at
+some universities (Shu \& Larivière, 2023). Furthermore, the focus of
+Chinese authors on established journals may contribute to this trend
+(Zhang et al., 2022). Although China supports Plan S (Schiermeier,
+2018), this is not reflected in the data in terms of open access uptake
+in hybrid journals. Market observers also do not expect a broad
+implementation of transformative agreements in China in near future
+(Owens, 2024). As highlighted by Koley \& Lala (2023), India faces
+similar challenges in terms of the availability of resources to pay for
+open access. At the same time, access to research literature is a
+pressing issue, which is addressed by the ``Indian one nation, one
+subscription'' policy proposal. However, this policy focuses on
+centrally negotiated subscriptions and does not entail open access.
 
 But open access uptake also differs among OECD countries. In the United
 States, for example, hybrid open access, including transformative
@@ -918,14 +912,14 @@ facilitating open access publication, were not fully supported by
 OpenAlex at the time of this study, first author affiliations were used
 instead. This study is also unable to account for the various types of
 transformative agreements due to a lack of data, especially regarding
-article types and caps limiting the number of open access articles
+article types and caps that limit the number of open access articles
 covered. Furthermore, assessing the quality of the OpenAlex and Crossref
 data used, particularly in terms of affiliations, corresponding
 authorship, and article types, by combining them with established
 bibliometric databases such as Scopus and Web of Science was beyond the
 scope of this analysis (Chinchilla-Rodríguez et al., 2024; Visser et
-al., 2021). It must therefore be emphasised that, unlike related
-evaluations of national consortia based on invoice data (Brayman et al.,
+al., 2021). It must therefore be emphasised that, unlike evaluations
+from national consortia that could make use of invoices (Brayman et al.,
 2024), this global overview can only provide an estimate of the support
 for open access through transformative agreements. Despite these
 limitations, the methodology was designed to underestimate, rather than
@@ -963,7 +957,7 @@ et al., 2023; Wenaas, 2022), as well as potential changes in authors'
 behaviour following the introduction of these agreements (Schmal, 2024).
 
 This study has practical implications for research funding and
-libraries. Of primary concern should be the observed differences across
+libraries. One concern should be the observed differences across
 countries, particularly the relationship between socio-economic
 development and open access adoption. Between 2018 and 2022, there was a
 notable increase in the number of closed access articles published in
@@ -976,10 +970,12 @@ in hybrid journals decreased. This imbalance, whereby open access uptake
 depends largely on a few countries, makes it less likely that collective
 action towards a large-scale transition of hybrid journals to full open
 access through transformation agreements will succeed within the next
-years. Rather, and in accordance with recent policy recommendations from
-the UK and Nordic countries (Brayman et al., 2024; Widding, 2024), it
+years. Rather, and in accordance with recent British and Scandinavian
+policy recommendations (Brayman et al., 2024; Widding, 2024), it
 emphasises the importance of ongoing evaluation and adaptation of open
-access strategies in view of global publishing trends.
+access strategies in view of global publishing trends and related
+challenges to equity and journal quality (Rasmussen, 2023; Ross-Hellauer
+et al., 2022).
 
 From a data perspective, research institutions and funders need to push
 towards price transparency in scholarly publishing to enable these
@@ -1437,7 +1433,8 @@ transformation to open access}}. Max Planck Digital Library.
 
 \bibitem[\citeproctext]{ref-Schmal_2024}
 Schmal, W. B. (2024). How transformative are transformative agreements?
-Evidence from germany across disciplines. \emph{Scientometrics}.
+Evidence from {Germany} across disciplines. \emph{Scientometrics},
+\emph{129}(3), 1863--1889.
 \url{https://doi.org/10.1007/s11192-024-04955-y}
 
 \bibitem[\citeproctext]{ref-Schmidt_2012}
