--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -78,8 +78,20 @@ doi = {doi/10.2777/89349}}
 
 @article{Ross_Hellauer_2022, title={Dynamics of cumulative advantage and threats to equity in open science: a scoping review}, volume={9}, ISSN={2054-5703}, url={http://dx.doi.org/10.1098/rsos.211032}, DOI={10.1098/rsos.211032}, number={1}, journal={Royal Society Open Science}, publisher={The Royal Society}, author={Ross-Hellauer, Tony and Reichmann, Stefan and Cole, Nicki Lisa and Fessl, Angela and Klebel, Thomas and Pontika, Nancy}, year={2022}, month=jan }
 
-@article{Schmal_2024, title={How transformative are transformative agreements? Evidence from Germany across disciplines}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-024-04955-y}, DOI={10.1007/s11192-024-04955-y}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Schmal, W. Benedikt}, year={2024}, month=feb }
-
+@article{Schmal_2024,
+  title={How transformative are transformative agreements? Evidence from {Germany} across disciplines}, 
+  volume={129}, 
+  ISSN={1588-2861}, 
+  url={http://dx.doi.org/10.1007/s11192-024-04955-y}, 
+  DOI={10.1007/s11192-024-04955-y}, 
+  number={3}, 
+  journal={Scientometrics}, 
+  publisher={Springer Science and Business Media LLC}, 
+  author={Schmal, W. Benedikt}, 
+  year={2024}, 
+  month=feb, pages={1863–1889}
+ }
+ 
 @Manual{hoaddata,
     title = {{hoaddata}: Data about hybrid open access journal publishing},
     author = {Najko Jahn},
